# uNGINXed-linter

./: .gitignore  .gitmodules  README.md  package-lock.json  package.json  requirements.txt
client/: package.json
client/src/: extension.ts
client/src/common/: constants.ts  server.ts
server/: pyproject.toml
server/tool/: _debug_server.py  server.py
tools/: build-python.py
