[tool.poetry]
name = "scanner-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygls = "^1.0.2"
unginxed = {path = "../uNGINXed"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
